# cxxmcp-examples

./: .gitignore  CMakeLists.txt  CONFORMANCE_STATUS.md  README.md
.github/workflows/: examples.yml
src/: async_request_matrix.cpp  client_callbacks_matrix.cpp  client_inbound_cancellation_matrix.cpp  client_subscription_helper_matrix.cpp  conformance_everything_client.cpp  conformance_everything_server.cpp  direct_http_legacy_sse_matrix.cpp  elicitation_client.cpp  extension_plugin_adapter_matrix.cpp  graceful_shutdown.cpp  handler_interface_matrix.cpp  http_auth_lite_matrix.cpp  http_gateway_runtime_matrix.cpp  log_triage_server.cpp  minimal_stdio_server.cpp  native_server_transport_matrix.cpp  pagination_cursor_matrix.cpp  policy_subscription_matrix.cpp  process_stdio_client_probe.cpp  rich_content_cancellation_matrix.cpp  runtime_services_matrix.cpp  sdk_smoke.cpp  server_to_client_context_matrix.cpp  streamable_http_client.cpp  task_cancel_matrix.cpp  timeout_cancellation_client.cpp  transport_adapter_matrix.cpp  transport_stdio_matrix.cpp  typed_tool_server.cpp  workspace_server.cpp
